--- a/PushBoxWebVersion/css/index.css
+++ b/PushBoxWebVersion/css/index.css
@@ -52,6 +52,7 @@ html,body {
   margin: 20px auto;
   padding: 10px;
   position: relative;
+  display:none;
 }
 #mainContainer * {
   user-select:none;
