--- a/PushBoxWebVersion/css/index.css
+++ b/PushBoxWebVersion/css/index.css
@@ -1,9 +1,8 @@
 html,body {
   margin: 0;
   padding: 0;
-  /* background-color: #F5F4F0; */
   background-color: #FFFAE8;
-  height:100%;
+/*   height:100%; */
 }
 .clearfix::after {
   content: '.';
@@ -46,7 +45,7 @@ html,body {
 /* ======= main-container ========= */
 #mainContainer {
   width: 1010px;
-  height: 500px;
+  height: 600px;
   background-color: darkgray;
   border-radius: 5px;
   margin: 20px auto;
